<resources>
    <string name="app_name">Taxi Meter</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="RadioGroupText">Selct Road Condtion</string>
    <string name="Distance">Distance:</string>
    <string name="ConditionGreat">1 - Great</string>
    <string name="ConditionGood">2 - Good</string>
    <string name="ConditionBad">3 - Bad</string>
    <string name="ConditionPoor">4 - Poor</string>
    <string name="StartRide">Start Ride</string>
    <string name="StopRide">Stop Ride</string>
    <string name="distance">Distance: </string>
    <string name="fee">Fare: </string>
    <string name="google_maps_key">AIzaSyCGN-FtFemdhjm65u7w8lK19bVtECXMQqk</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
