<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background_material_dark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/Layout1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RadioGroupText"
            android:textSize="20sp"
            android:textColor="#fff52c"
            android:textAlignment="center"/>

        <RadioGroup
            android:orientation="horizontal"
            android:id="@+id/roadCondition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ConditionGreat"
                android:textColor="#fff52c"
                android:checked="true">
            </RadioButton>

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ConditionGood"
                android:textColor="#fff52c">
            </RadioButton>

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ConditionBad"
                android:textColor="#fff52c">
            </RadioButton>
            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ConditionPoor"
                android:textColor="#fff52c">
            </RadioButton>
        </RadioGroup>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/StartRide"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/StartRide"
                android:onClick="startRide"/>
            <Button
                android:id="@+id/EndRide"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/StopRide"
                android:onClick="stopRide"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Layout2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Layout1">
        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:textSize="20sp"
            android:textColor="#fff52c"/>
        <TextView
            android:id="@+id/distanceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#fff52c"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/Layout3"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Layout2">
            <TextView
                android:id="@+id/fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fee"
                android:textSize="20sp"
                android:textColor="#fff52c"/>
            <TextView
                android:id="@+id/feeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#fff52c"/>
    </LinearLayout>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity"
        android:layout_below="@+id/Layout3" />
</RelativeLayout>
